# opensearch-fscrawler

./: .claudeignore  .security-baseline.json  AGENTS.md  COMPATIBILITY.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  TODO.md  docker-compose.yml  pyproject.toml
.githooks/: pre-commit  pre-push
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: configuration.md  supply-chain-security.md
scripts/: install-hooks.sh  security_scan.py  update_security_baseline.py
src/fscrawler/: __init__.py  cli.py  client.py  crawler.py  indexer.py  logging_config.py  models.py  multipart.py  parser.py  rest_server.py  settings.py  templates.py  watcher.py
tests/: conftest.py
tests/data/: bulk_response_success.json  component_template_exists.json  component_template_missing.json  fatal_connection_error.json  index_template_missing.json  opensearch_cluster_health.json  opensearch_info.json  tika_response.json
tests/integration/: test_crawl.py
tests/unit/: test_client.py  test_crawler.py  test_indexer.py  test_logging_config.py  test_parser.py  test_pipeline.py  test_rest_server.py  test_settings.py  test_watcher.py
